FIX #392, Aspect ratio and cropping issue is resolved

--- a/styles/testimonial.module.css
+++ b/styles/testimonial.module.css
@@ -11,6 +11,7 @@
 .testimonial__client_Avatar {
   width: 50px;
   height: 50px;
+  object-fit:contain;
 }
 .testimonial__client h6 {
   font-weight: 400;
